# Bot-save-the-Queen

./: .gitignore  LICENSE  README.md  SPI.sv  bettermotor.py  god_save_the_main.py  main.sv  testmoteur.py
Minibot/DE0_NANO_V2/: DE0_NANO_V2.v  (+12 more)
Robot principal/Raspberry Pi/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  closedloop_data.txt  cmake_install.cmake  encoder_data.txt  exeRobotProgram  gainsCalculator.py  middle_level_test.txt
Robot principal/Raspberry Pi/Mobility/C++/: encoder_data.txt  robot_program
Robot principal/Raspberry Pi/Mobility/C++/include/: Motor.h  Robot.h  Screen.h
Robot principal/Raspberry Pi/Mobility/C++/src/: Motor.cpp  Robot.cpp  Screen.cpp  main.cpp
Robot principal/Raspberry Pi/include/: FSM.h  Motor.h  Robot.h  Screen.h  SharedStruct.h  lidar.h  struct.h
Robot principal/Raspberry Pi/lib/rplidar_sdk/app/frame_grabber/: RCa02084  RCc12096  framegrabber.rc
Robot principal/Raspberry Pi/lib/rplidar_sdk/output/Linux/Release/: custom_baudrate  simple_grabber  ultra_simple
Robot principal/Raspberry Pi/lib/rplidar_sdk/sdk/src/: sl_lidar_driver.cpp
Robot principal/Raspberry Pi/lib/rplidar_sdk/workspaces/vc14/: sdk_and_demo.sln
Robot principal/Raspberry Pi/src/: Motor.cpp  Robot.cpp  Screen.cpp  SharedSruct.cpp  main hugo et rom.cpp  main test 2.cpp  main test.cpp  main.cpp  main.cpp.disabled  main1.cpp  struct.cpp
Robot principal/Raspberry Pi/src/Actuators/: teensyCans.cpp  teensyCansLift.cpp  teensyCheckIR.cpp  teensyCommand.cpp  teensyLift.cpp  teensy_build.cpp  teensy_grab.cpp  teensy_third_stage.cpp
Robot principal/Raspberry Pi/src/Lidar/: lidar.cpp
Robot principal/Raspberry Pi/src/Loops/: loops.cpp
Robot principal/Raspberry Pi/src/Mobility/: getAngle.cpp  initializeSPI.cpp  lowLevelController.cpp  lowLevelTest.cpp  middleLevelController.cpp  odometry.cpp  openLoopData.cpp  printDistance.cpp  resetValues.cpp  routine.cpp  startRobot.cpp  stopRobot.cpp
Robot principal/Raspberry Pi/src/Mobility/Controller/: highLevelController.cpp  lowLevelController.cpp  maneuver.cpp  maneuvers_and_orientation.cpp  middleLevelController.cpp
Robot principal/Raspberry Pi/src/Mobility/Function tests/: lowLevelTest.cpp  middle_level_test.cpp  openLoopData.cpp  printDistance.cpp
Robot principal/Raspberry Pi/src/Mobility/Initialization and deactivation/: startRobot.cpp  stopRobot.cpp
Robot principal/Raspberry Pi/src/Mobility/Localization/: links.txt  microswitches.cpp  nodes.txt  nodes_17-5.txt  odometry.cpp  pathPlanning.cpp
Robot principal/Raspberry Pi/src/Mobility/Motors/: Motor.cpp
Robot principal/Raspberry Pi/src/Multimedia/: Buzzer.cpp  Screen.cpp  startingCord.cpp
Robot principal/Raspberry Pi/src/Strategy/: FSM.cpp  build_stack.cpp  drop_banner.cpp  ennemy_avoidance.cpp  fsm_build_stack.cpp  fsm_drop_banner.cpp  fsm_grab_stack.cpp  grab_stack.cpp  infrared_check_stack.cpp
Robot principal/Raspberry Pi/src/strategy/: FSM.cpp
(+580 files in other folders)
